Revisão e Documentação, start modo DEV

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,20 @@
+# Configurações da fonte de dados (H2 - Banco de dados em memória para testes)
 spring.datasource.url=jdbc:h2:mem:testdb
+#   * jdbc:h2: Indica que estamos a usar o driver JDBC do H2.
+#   * mem:testdb: Cria um banco de dados em memória chamado "testdb".  Os dados são perdidos ao terminar a aplicação.
 spring.datasource.username=sa
+#   * Nome de utilizador para a conexão ao banco de dados H2 (normalmente "sa" para acesso total).
 spring.datasource.password=
+#   * Senha para a conexão ao banco de dados H2 (deixada em branco por defeito em bancos de dados em memória H2).
 
+# Configurações da consola H2
 spring.h2.console.enabled=true
+#   * Habilita a consola web do H2, que permite interagir com o banco de dados através de um navegador.
 spring.h2.console.path=/h2-console
+#   * Define o caminho para aceder à consola H2.  Neste caso, estará disponível em "/h2-console" na aplicação.
 
+# Configurações do JPA/Hibernate
 spring.jpa.show-sql=true
+#   * Exibe as queries SQL geradas pelo Hibernate na consola. Útil para debug e verificação.
 spring.jpa.properties.hibernate.format_sql=true
+#   * Formata as queries SQL exibidas na consola, tornando-as mais legíveis.
