ScripSQL e dev-properties/dev-properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,26 +1,5 @@
-# Configurações da fonte de dados (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://localhost:5432/db-Springboot-JPA-Hibernate
-# URL de conexão com o banco de dados.  Especifica o driver, local, porta e nome do banco.
-spring.datasource.username=postgres
-# Nome de usuário para autenticação no banco de dados.
-spring.datasource.password=daniel
-# Senha para autenticação no banco de dados.
-
-# Configurações do JPA/Hibernate
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# Configuração para lidar com LOBs (Large Objects) fora de um contexto transacional.
-spring.jpa.hibernate.ddl-auto=update
-#update: Atualiza o schema do banco de dados conforme as entidades JPA.
-#create: cria o schema do banco do zero a cada vez que a aplicacao roda
-#create-drop: apaga tudo quando a aplicacao termina
-#none: nao faz nada
-spring.jpa.show-sql=true
-# Exibe as queries SQL geradas pelo Hibernate no console. Útil para debug.
-spring.jpa.properties.hibernate.format_sql=true
-# Formata as queries SQL exibidas no console, melhorando a legibilidade.
-
-# Configurações do JWT (JSON Web Token)
-jwt.secret=MYJWTSECRET
-# Chave secreta usada para assinar os tokens JWT.  Mantenha isso em segredo!
-jwt.expiration=3600000
-# Tempo de expiração do token JWT em milissegundos (neste caso, 1 hora).
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
