--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 # Define o perfil de aplicação ativo como "test".
 # Isso significa que as configurações específicas para o perfil "test" serão usadas.
 
