Add execution permission to mvnw

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 # Define o perfil de aplicação ativo como "test".
 # Isso significa que as configurações específicas para o perfil "test" serão usadas.
 
@@ -15,3 +15,5 @@ spring.jpa.properties.failOnError=true
 # Configura o nível de log para o pacote "org.springframework" e seus subpacotes para DEBUG.
 # Isso irá gerar uma quantidade maior de informações de log, o que pode ser útil para depuração.
 # logging.level.org.springframework=DEBUG
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
