--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,26 @@
-spring.datasource.url=${DATABASE_URL}
-spring.jpa.show-sql=false
+# Configurações da fonte de dados (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://dpg-d0l7u03e5dus73cbm3t0-a.frankfurt-postgres.render.com:5432/dbspringbootjpa
+# URL de conexão com o banco de dados.  Especifica o driver, local, porta e nome do banco.
+spring.datasource.username=daniel
+# Nome de usuário para autenticação no banco de dados.
+spring.datasource.password=daniel
+# Senha para autenticação no banco de dados.
+
+# Configurações do JPA/Hibernate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Configuração para lidar com LOBs (Large Objects) fora de um contexto transacional.
+spring.jpa.hibernate.ddl-auto=update
+#update: Atualiza o schema do banco de dados conforme as entidades JPA.
+#create: cria o schema do banco do zero a cada vez que a aplicacao roda
+#create-drop: apaga tudo quando a aplicacao termina
+#none: nao faz nada
+spring.jpa.show-sql=true
+# Exibe as queries SQL geradas pelo Hibernate no console. Útil para debug.
 spring.jpa.properties.hibernate.format_sql=false
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+# Formata as queries SQL exibidas no console, melhorando a legibilidade.
+
+# Configurações do JWT (JSON Web Token)
+jwt.secret=MYJWTSECRET
+# Chave secreta usada para assinar os tokens JWT.  Mantenha isso em segredo!
+jwt.expiration=3600000
+# Tempo de expiração do token JWT em milissegundos (neste caso, 1 hora).
