Permissão de execução para mvnw

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.properties.failOnError=true
 # logging.level.org.springframework=DEBUG
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=9090
+
