Web service e htlm updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.jpa.properties.failOnError=true
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# server.port=9090
+server.port=8080
 
