Povoamento da base de dados no Render

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,7 @@
 # Configurações da fonte de dados (PostgreSQL)
-pring.datasource.url=${DATABASE_URL}
-# URL de conexão com o banco de dados.  Especifica o driver, local, porta e nome do banco.
-spring.datasource.username=${DATABASE_USERNAME}
-# Nome de usuário para autenticação no banco de dados.
-spring.datasource.password=${DATABASE_PASSWORD}
-# Senha para autenticação no banco de dados.
+spring.datasource.url=jdbc:postgresql://dpg-d0l7u03e5dus73cbm3t0-a.frankfurt-postgres.render.com:5432/dbspringbootjpa
+spring.datasource.username=daniel
+spring.datasource.password=daniel
 
 # Configurações do JPA/Hibernate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
